<resources>
    <string name="app_name">NFC Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="authBtnText">Войти</string>
    <string name="hintETSN">Номер студенческого билета</string>
    <string name="lNameHint">Фамилия</string>
    <string name="fNameHint">Имя</string>
    <string name="helloText">Добро пожаловать</string>
    <string name="yourNameText">Ваше имя</string>
    <string name="yourLNameText">Ваша фамилия</string>
    <string name="yourStudentIdText">Номер студенческого</string>
    <string name="button_save">Войти</string>
    <string name="button_cancel">Сбросить</string>
    <string name="hint_name">Имя</string>
    <string name="hint_surname">Фамилия</string>
    <string name="hint_studnum">№ студенческого билета</string>
    <string name="start_time">Начало: </string>
    <string name="end_time">Окончание: </string>
    <string name="subject">Дисциплина: </string>
    <string name="label_SingUp">РЕГИСТРАЦИЯ</string>
    <string name="hint_email">Email</string>
    <string name="hint_studentID">Номер студенчиского</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_name_student">Name student</string>

    <string name="ButtonSingUpLable">Зарегистрироваться</string>
    <string name="ButtonSingInLable">Войти</string>
    <string name="label_SingIn">ВОЙТИ</string>
    <string name="label_WaitingAccept">ДОЖДИТЕСЬ ПОДТВЕРЖДЕНИЯ АДМИНИСТРАТОРА</string>
    <string name="email">Email: </string>
    <string name="studentID">Номер студенчиского: </string>
    <string name="student_group">Группа: </string>
    <string name="ButtonUpdate">Обновить</string>

    <string name="Profile">Профиль</string>
    <string name="Schedule">Расписание</string>
    <string name="Permissions">Разрешения</string>
    <string name="NfcScanning">Отсканировать метку</string>

    <string name="patronymic">Отчество</string>
    <string name="role">Роль</string>
    <string name="group_num">Номер группы</string>

</resources>