<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:background="@drawable/main_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="14dp"
        android:paddingTop="10dp">

        <ImageView
            android:layout_width="201dp"
            android:layout_height="187dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/univ_logo" />

        <TextView
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="10dp"
            android:textColor="@color/TextColor"
            android:gravity="center"
            android:text="@string/label_SingIn"
            android:textSize="32dp"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/shape"
            android:padding="24dp"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.NFCProject.TextInputLayout"
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textviewshape"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/TextColor"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.NFCProject.TextInputLayout"
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textPassword"
                    android:background="@drawable/textviewshape"
                    android:textColor="@color/TextColor"
                    android:fontFamily="@font/roboto"
                    android:layout_marginBottom="16dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="10dp"
                android:id="@+id/SingInButton"
                style="@style/Widget.NFCProject.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:textColor="#DDEFF3"
                android:text="@string/label_SingIn"
                app:backgroundTint="#3165A3"
                app:cornerRadius="5dp" />
        </LinearLayout>



    </LinearLayout>

</layout>